Updates from Christine and Daniel

--- a/notebooks/article-sql-scripts.ipynb
+++ b/notebooks/article-sql-scripts.ipynb
@@ -23,6 +23,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "The sql module is not an IPython extension.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install jupysql python-dotenv --quiet # or conda install -c conda-forge jupysql"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
