--- a/notebooks/evaluations_rewi_create basic_tables.ipynb
+++ b/notebooks/evaluations_rewi_create basic_tables.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# OpenAlex data for journals in the field of german law"
    ]
@@ -15,12 +13,12 @@
    "source": [
     "## Table of content\n",
     "* [Configure Notebook](#configure)\n",
-    "* [Intro](#Intro)\n",
-    "    * [General](#General)\n",
-    "    * [Specifications](#Specifications)\n",
-    "    * [Preparation](#Prep)\n",
+    "* [Intro](#intro)\n",
+    "    * [General](#general)\n",
+    "    * [Specifications](#specifications)\n",
+    "    * [Preparation](#prep)\n",
     "* [Items](#items)\n",
-    "    * [Item table](#item_table)\n",
+    "    * [Item table](#items_table)\n",
     "    * [Journal table](#journal_table)\n",
     "* [Metadata](#metadata)\n",
     "    * [Publication years](#pubyears)\n",
@@ -146,26 +144,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"Intro\"></a> Intro\n",
+    "## <a id=\"intro\"></a> Intro\n",
     "\n",
-    "### <a id=\"General\"></a> General\n",
+    "### <a id=\"general\"></a> General\n",
     "\n",
     "To run this notebook (preparation of tables for evaluations) you have to run the notebook evaluations_rewi_journal_lists first, as some of the resulting tables are used here. \n",
     "While in the other notebook we had a look at journal coverage, we now dive deeper into the OpenAlex data to evaluate the coverage on items level as well as metadata quality. \n",
     "For this we needed an item based gold standard with metadata information. We received some data directly from the publishers we use here. \n",
     "Evaluations until publication year 2023 (2023 included) - to change it change the parameter max_pubyear below. \n",
-    "As this evaluation is done mailny on OpenAlex (simply because in the other sources we do not have enough content to evaluate), you can run it without having licensed Web of Science or Scopus (with very few exceptions)."
+    "As this evaluation is done mainly on OpenAlex (simply because in the other sources we do not have enough content to evaluate), you can run it without having licensed Web of Science or Scopus (with very few exceptions)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id=\"Specifications\"></a>Specifications\n",
-    "To run this, you have to specify the version you want to use from the different sources. \n",
-    "The vesion parameter specifies a suffix that is appended to all result tables. For Web of Science (wos) and Scopus (scp) the KB processes quarterly bibliometric databases in a specific schema. For OpenAlex, data is processed monthly. \n",
-    "\n",
-    "The parameters wos/scopus/openalex_bdb_schema have to be names of schemas in the PostgreSQL database following the KB data schema for bibliometric databases (todo: link zu zenodo veröffentlichung). The queries create tables in the given result schema. "
+    "### <a id=\"specifications\"></a>Specifications\n",
+    "To run this, you have to specify the version you want to use from the different sources. The version parameter specifies a suffix that is appended to all result tables. For Web of Science (wos) and Scopus (scp) the KB (https://bibliometrie.info/) processes quarterly bibliometric databases in a specific schema. For OpenAlex, data is processed monthly.\r\n",
+    "\r\n",
+    "The parameters wos/scopus/openalex_bdb_schema have to be names of schemas in the PostgreSQL database following the KB data schema for bibliometric databases (see https://zenodo.org/records/13935407). The queries create tables in the given result schema."
    ]
   },
   {
@@ -186,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id=\"Prep\"></a>Preparation: one table with all Publisherdata \n",
+    "### <a id=\"prep\"></a>Preparation: one table with all Publisherdata \n",
     "\n",
     "We received some data directly from publishers in different formats. This is combined here in one table. Join is done by  doi (already added to the single tables after the import), OpenAlex work type 'paratext' had to be excluded and doi matching had to be done case insensitive. "
    ]
@@ -535,22 +532,6 @@
     "and not item_id in (select openalex_id from {{result_schema}}.eva_all_publisherdata_{{version_name}});\n",
     "\n",
     "alter table {{result_schema}}.eva_all_openalex_items_{{version_name}} add column remark text;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Example for getting this table in a dataframe: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_sql(f'select * from {result_schema}.eva_all_openalex_items_{version_name}', engine)"
    ]
   },
   {
@@ -1296,7 +1277,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Todo: Question: why are they contained? One reason for older years could be that we do not have publisherdata for the old years (this would be ok) - but not for e.g. 2023 \n",
     "For better evaluation: examles for a specific journal (usw parameter)"
    ]
   },
@@ -3203,23 +3183,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['journal_name', 'diff', 'number_of_articles'], dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dfx.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -3488,38 +3451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;kb_prod&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'kb_prod'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RuntimeError: (psycopg2.OperationalError) could not translate host name \"biblio-p-db03.fiz-karlsruhe.de\" to address: Name or service not known\n",
-      "\n",
-      "[SQL: select count(distinct work_id)\n",
-      "from project_rewi.eva_all_publisherdata_202408  a\n",
-      "left join fiz_openalex_rep_20240831_openbib_fdw.works_authorships b\n",
-      "on a.openalex_id = b.work_id\n",
-      "where institution_id is not null]\n",
-      "[parameters: [{}]]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "select count(distinct work_id)\n",
@@ -5553,7 +5487,7 @@
    "metadata": {},
    "source": [
     "Examples of items with different publication years in OpenAlex and publisherdata \n",
-    "todo: maybe some manual checks which pubyear is correct and why they differ? (early access??)"
+    "to investigate which publication year is correct and why they differ..."
    ]
   },
   {
@@ -6858,13 +6792,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---- The following queries are additional, not mentioned in the article  ... (?) ---> todo: nochmal ansehen und evtl aussortieren"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we want to have a look at the (rare) references: we would expect that articles of journals in the gold standard set reference articles that are also in the gold standard set \n",
     "or at least classified as 'german law article' in OpenAlex."
    ]
@@ -7589,8 +7516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have a look at referenced articles that are neither in the gold standard nor considered as german law articles in OpenAlex. \n",
-    "What kind of articles?? Maybe additional evaluation on their keywords?"
+    "Have a look at referenced articles that are neither in the gold standard nor considered as german law articles in OpenAlex:"
    ]
   },
   {
@@ -11556,60 +11482,6 @@
     "on a.abk = b.abk \n",
     "order by a.rang "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;kb_prod&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'kb_prod'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "    -- !! todo: löschen bei Veröffentlichung !!\n",
-    "grant select on all tables in schema {{result_schema}} to mpgdfejzo, mpgcboulanger, kbprodadmin;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
