--- a/notebooks/evaluations_rewi_journal_lists.ipynb
+++ b/notebooks/evaluations_rewi_journal_lists.ipynb
@@ -24,10 +24,9 @@
     "    * [Preparations](#coverage-preparations)\n",
     "    * [Coverage](#coverage-head)\n",
     "        * [Web of Science](#coverage-wos)\n",
-    "        * [Scopus](#coverage-scopus)\n",
+    "        * [Scopus](#coverage-scp)\n",
     "        * [OpenAlex](#coverage-openalex)\n",
     "        * [CrossRef](#coverage-crossref)\n",
-    "        * [Wikidata](#coverage-wikidata)\n",
     "    * [Coverage results](#coverage-results)\n",
     "    "
    ]
@@ -131,18 +130,19 @@
     "* Scopus (scp)\n",
     "* OpenAlex (openalex)\n",
     "\n",
-    "In a second step we used a given list (from an article Gröls/Gröls todo: link) with journals considered as relevant for the field of german law in the eyes of experts. We checked coverage of these journals in the data sources.\n"
+    "In a second step we used a given list (from an article Gröls/Gröls) with journals considered as relevant for the field of german law in the eyes of experts. We checked coverage of these journals in the data sources."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"Specifications\">Specifications\n",
-    "To run this, you have to specify the version you want to use from the different sources. \n",
-    "The vesion parameter specifies a suffix that is appended to all result tables. For Web of Science (wos) and Scopus (scp) the KB processes quarterly bibliometric databases in a specific schema. For OpenAlex, data is processed monthly. \n",
+    "## <a id=\"Specifications\"></a>Specifications\n",
     "\n",
-    "The parameters wos/scopus/openalex_bdb_schema have to be names of schemas in the PostgreSQL database following the KB data schema for bibliometric databases (todo: link zu zenodo veröffentlichung). The queries create tables in the given result schema. "
+    "To run this, you have to specify the version you want to use from the different sources. \n",
+    "The version parameter specifies a suffix that is appended to all result tables. For Web of Science (wos) and Scopus (scp) the KB (https://bibliometrie.info/) processes quarterly bibliometric databases in a specific schema. For OpenAlex, data is processed monthly. \n",
+    "\n",
+    "The parameters wos/scopus/openalex_bdb_schema have to be names of schemas in the PostgreSQL database following the KB data schema for bibliometric databases (see https://zenodo.org/records/13935407). The queries create tables in the given result schema. "
    ]
   },
   {
@@ -155,8 +155,8 @@
     "result_schema = \"project_rewi\"\n",
     "wos_bdb_schema = \"wos_b_202407\"\n",
     "scp_bdb_schema = \"scp_b_202407\"\n",
-    "openalex_bdb_schema = \"fiz_openalex_bdb_20240831_openbib_fdw\"\n",
-    "openalex_rep_schema = \"fiz_openalex_rep_20240831_openbib_fdw\"\n",
+    "openalex_bdb_schema = \"fiz_openalex_bdb_20240831_openbib\"\n",
+    "openalex_rep_schema = \"fiz_openalex_rep_20240831_openbib\"\n",
     "crossref_table = \"open_add_ons.cr_oct2023\""
    ]
   },
@@ -1918,10 +1918,10 @@
    "source": [
     "%%sql\n",
     "select source_id, display_name \n",
-    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_202408 \n",
+    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_{version_name} \n",
     "where display_name in \n",
     "(select display_name\n",
-    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_202408 eodljtsr \n",
+    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_{version_name} eodljtsr \n",
     "group by display_name \n",
     "having count(*)> 1) \n",
     "order by display_name"
@@ -2136,7 +2136,7 @@
    "source": [
     "%%sql\n",
     "select source_id as openalex_journal_id, display_name, works_count as number_of_articles, law_and_de_article_share\n",
-    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_202408 \n",
+    "from project_rewi.eva_openalex_de_law_journals_trivial_search_result_{version_name} \n",
     "order by works_count desc"
    ]
   },
@@ -2151,9 +2151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id=\"coverage-preparations\"></a> Preparations\n",
+    "## <a id=\"coverage-preparations\"></a>Preparations\n",
     "\n",
-    "The article contains two lists of journals: one with general german law journals, one with field specific journals. For evaluation on coverage we used a union of these journals \n",
+    "The Gröls/Gröls article contains two lists of journals: one with general german law journals, one with field specific journals. For evaluation on coverage we used a union of these journals \n",
     "as we are interested in the coverage of 'important' german law journals, never mind if they are general ones or belong to a specific subfield. "
    ]
   },
@@ -2228,8 +2228,7 @@
    "source": [
     "## <a id=\"coverage-head\"></a> Coverage\n",
     "\n",
-    "The following queries append columns for each datasource and append columns indicating ids in the different sources, matching is done based on issn. We also did a manual check afterwards for finding journals that could not be mapped automatcally based on issn as a postprocessing step for our first version, but this step did not make a difference (?? nochmal checken). \n",
-    "\n",
+    "The following queries append columns for each datasource and append columns indicating ids in the different sources, matching is done based on issn. We also did a manual check afterwards for finding journals that could not be mapped automatically based on issn as a postprocessing step for our first version. \n",
     "In a first step a table for recording the coverage in the given version is created as a copy from the fixed table with all journals from the article."
    ]
   },
@@ -2382,7 +2381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id=\"coverage-scp\"></a> Scopus"
+    "### <a id=\"coverage-scp\"></a>Scopus"
    ]
   },
   {
@@ -6330,8 +6329,8 @@
     "select distinct zeitschrift, abk, issn_list, array_agg(distinct b.issn) as issn_bdb, array_agg(b.id) as openalex_ids\n",
     "from (select zeitschrift, abk, issn_list, unnest(issn_list) as issn from {{result_schema}}.jura_groels_alle_zeitschriften_{{version_name}}) a \n",
     "join (\n",
-    "select json_array_elements_text(issn -> 'issn') as issn, id from fiz_openalex_rep_20240427.sources \n",
-    "union select issn_l as issn, id from fiz_openalex_rep_20240427.sources\n",
+    "select json_array_elements_text(issn -> 'issn') as issn, id from {openalex_rep_schema}.sources \n",
+    "union select issn_l as issn, id from {openalex_rep_schema}.sources\n",
     ") b \n",
     "on a.issn=b.issn\n",
     "group by zeitschrift, abk, issn_list); \n",
@@ -7520,10 +7519,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 143,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### Details"
    ]
@@ -8016,17 +8013,6 @@
     "select '{{version_name_2}}' as version, 'openalex' as data_source, count(*) as coverage, round(100*count(*)/(select count(*) from {{version_schema_2}}.jura_groels_alle_zeitschriften_{{version_name_2}})::decimal,2) as coverage_percent from {{version_schema_2}}.jura_groels_alle_zeitschriften_{{version_name_2}} where openalex_issn is not null\n",
     "    ) \n",
     "order by data_source, version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "    -- !! todo: löschen bei Veröffentlichung !!\n",
-    "grant select on all tables in schema {result_schema} to mpgdfejzo, mpgcboulanger, kbprodadmin;"
    ]
   }
  ],
