--- a/docs/references.bib
+++ b/docs/references.bib
@@ -18,8 +18,7 @@
 	pages = {257{\textendash}279},
 	volume = {14},
 	number = {2},
-	doi = {10.1515/zfrs-1993-0206},
-	url = {https://www.degruyter.com/view/j/zfrs.1993.14.issue-2/zfrs-1993-0206/zfrs-1993-0206.xml?rskey=uA5B3l&result=23}
+	doi = {10.1515/zfrs-1993-0206}
 }
 
 @book{coupette2019,
@@ -218,43 +217,9 @@ Section: Education and debate},
 	note = {Repository: SocArXiv}
 }
 
-@article{tennant2020,
-	title = {Web of Science and Scopus are not global databases of knowledge},
-	author = {Tennant, Jonathan},
-	year = {2020},
-	month = {03},
-	date = {2020-03-12},
-	doi = {10.31235/osf.io/qhvgr},
-	url = {https://osf.io/qhvgr},
-	note = {Repository: SocArXiv}
-}
-
-@article{tennant2020,
-	title = {Web of Science and Scopus are not global databases of knowledge},
-	author = {Tennant, Jonathan},
-	year = {2020},
-	month = {03},
-	date = {2020-03-12},
-	doi = {10.31235/osf.io/qhvgr},
-	url = {https://osf.io/qhvgr},
-	note = {Repository: SocArXiv}
-}
-
-@article{tennant2020,
-	title = {Web of Science and Scopus are not global databases of knowledge},
-	author = {Tennant, Jonathan},
-	year = {2020},
-	month = {03},
-	date = {2020-03-12},
-	doi = {10.31235/osf.io/qhvgr},
-	url = {https://osf.io/qhvgr},
-	note = {Repository: SocArXiv}
-}
-
 @inbook{vanRaan_2019, 
 	address={Cham}, 
 	title={Measuring Science: Basic Principles and Application of Advanced Bibliometrics}, 
-	url={https://doi.org/10.1007/978-3-030-02511-3_10},
 	DOI={10.1007/978-3-030-02511-3_10}, 
 	booktitle={Springer Handbook of Science and Technology Indicators}, 
 	publisher={Springer International Publishing}, 
@@ -271,6 +236,44 @@ Section: Education and debate},
 	author = {Cioffi, Alessia and Peroni, Silvio},
 	year = {2022},
 	date = {2022},
-	doi = {10.48550/ARXIV.2205.14677},
-	url = {https://arxiv.org/abs/2205.14677}
+	doi = {10.48550/ARXIV.2205.14677}
 }
+
+@misc{schmidtEtAl2024,
+  title = {The {{Data Infrastructure}} of the {{German Kompetenznetzwerk Bibliometrie}}: {{An Enabling Intermediary}} between {{Raw Data}} and {{Analysis}}},
+  author = {Schmidt, Marion and Rimmert, Christine and Stephen, Dimity and Lenke, Christopher and Donner, Paul and G{\"a}rtner, Simone and Taubert, Niels and Bausenwein, Thomas and Stahlschmidt, Stephan},
+  year = {2024},
+  publisher = {Zenodo},
+  doi = {10.5281/zenodo.13932928},
+  langid = {english},
+  keywords = {Bibliometric data infrastructure}
+}
+
+@misc{gulden2023,
+  type = {{LTO}},
+  title = {{Peer-Review-Verfahren in juristischen Zeitschriften}},
+  author = {Gulden, Alina},
+  year = {2023},
+  month = oct,
+  journal = {LTO-Karriere},
+  urldate = {2023-10-10},
+  abstract = {Anders als in der Naturwissenschaft werden juristische Fachbeitr{\"a}ge nicht auf richtig oder falsch {\"u}berpr{\"u}ft. Wann werden Peer-Review-Verfahren eingesetzt?},
+  howpublished = {https://www.lto.de/karriere/im-job/stories/detail/peer-review-verfahren-in-juristischen-fachzeitschriften},
+  langid = {ngerman}
+}
+
+@article{versi1992,
+  title = {"{{Gold}} Standard" Is an Appropriate Term.},
+  author = {Versi, E.},
+  year = {1992},
+  month = jul,
+  journal = {British Medical Journal},
+  volume = {305},
+  number = {6846},
+  pages = {187--187},
+  publisher = {British Medical Journal Publishing Group},
+  issn = {0959-8138, 1468-5833},
+  doi = {10.1136/bmj.305.6846.187-b},
+  urldate = {2025-01-29}
+}
+
