--- a/notebooks/rewi-journals-compare-lists.ipynb
+++ b/notebooks/rewi-journals-compare-lists.ipynb
@@ -260,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kb-bibliometry",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
